# rustyfarian-ws2812

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: rust.yml
crates/esp-hal-ws2812-rmt/: Cargo.toml
crates/esp-hal-ws2812-rmt/src/: lib.rs
crates/esp-idf-ws2812-rmt/: Cargo.toml
crates/esp-idf-ws2812-rmt/src/: lib.rs
crates/esp32-ws2812-rmt/: Cargo.toml
crates/esp32-ws2812-rmt/src/: lib.rs
crates/ferriswheel/: Cargo.toml
crates/ferriswheel/src/: chase.rs  effect.rs  flash.rs  hsv.rs  lib.rs  palette.rs  progress.rs  pulse.rs  rainbow.rs  section.rs  spinner.rs  util.rs
crates/led-effects/: Cargo.toml
crates/led-effects/src/: hsv.rs  lib.rs  rainbow.rs  simple_led.rs
crates/rustyfarian-esp-hal-ws2812/: Cargo.toml
crates/rustyfarian-esp-hal-ws2812/src/: lib.rs
crates/rustyfarian-esp-idf-ws2812/: Cargo.toml
crates/rustyfarian-esp-idf-ws2812/src/: lib.rs
crates/ws2812-core/: Cargo.toml
crates/ws2812-core/src/: lib.rs
crates/ws2812-pure/: Cargo.toml
crates/ws2812-pure/src/: lib.rs
docs/: ROADMAP.md  why-yet-another-ws2812-crate.md
docs/adr/: 001-rgb-color-type.md  002-rainbow-effect-led-limit.md  003-rename-core-to-pure.md  004-effect-trait.md  005-dual-hal-strategy.md
