[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["datenkollektiv"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datenkollektiv/rustyfarian-ws2812"

[workspace.dependencies]
# External dependencies
anyhow = "1.0"
rgb = "0.8"

# Internal crates
led-effects = { path = "crates/led-effects" }
ws2812-pure = { path = "crates/ws2812-pure" }

# ESP32 dependencies
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
