[package]
name = "led-effects"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable LED animation effects for embedded projects"
keywords = ["led", "animation", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[features]
default = ["hal"]
hal = ["dep:embedded-hal"]

[dependencies]
embedded-hal = { version = "1", optional = true }
rgb.workspace = true
